[metadata]
name = simvi
version = 0.0.2
author = Mingze Dong
author_email = mingze.dong@yale.edu
description = Spatial Interaction Modeling using Variational Inference
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MingzeDong/SIMVI
project_urls =
    Bug Tracker = https://github.com/MingzeDong/SIMVI/issues
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    pandas
    scanpy
    torch
    pytorch_lightning
    tqdm
    scvi-tools>=0.15.0, <=0.16.2
    scikit-learn
    scipy
    statsmodels
    anndata
    torch_geometric

[options.packages.find]
where = 
